SERVER-72065 Fix refresh of sessions cache in CSRS secondary nodes